cambiando ruta imagenes

--- a/kernelTrick.tex
+++ b/kernelTrick.tex
@@ -663,7 +663,7 @@ K: X \times X &\rightarrow &\mathbb{R} \\
 
 \begin{figure}[ht!]
 \centering
-\includegraphics[width=90mm]{featuremaphilbert.jpg}
+\includegraphics[width=90mm]{img/featuremaphilbert.jpg}
 \caption{Feature map in RKHS}
 \label{overflow}
 \end{figure}
@@ -941,7 +941,7 @@ K(x,y):
 
 \begin{figure}[ht!]
 \centering
-\includegraphics[width=100mm]{ejemplo.jpg}
+\includegraphics[width=100mm]{img/ejemplo.jpg}
 \caption{Ejemplo de kernel}
 \label{ejemplo}
 \end{figure}
