--- a/kernelTrick.tex
+++ b/kernelTrick.tex
@@ -69,10 +69,9 @@
 \begin{document}
 \maketitle
 
-% % % IDEA INTUITIVA DE KERNELS % % %
-
 \input{src/intro}
-\input{src/espaciosHilbert}
+\input{src/hilbert}
+\input{src/rkhs}
 \input{src/ejemplosRKHS}
 \input{src/kTrick}
 \input{src/ejemplos}
