--- a/src/rkhs.tex
+++ b/src/rkhs.tex
@@ -1,4 +1,3 @@
-
 \section{Espacios de Hilbert de Kernel Reproductor (RKHS)}
 
 
@@ -24,6 +23,8 @@ E_x(f):=f(x)\,,\quad\forall f\in \mathbb{R}^X\,.
 $$
 \end{mydef}
 
+
+
 \textbf{Nota:} En el contexto de las llamadas m\'aquinas de aprendizaje, $X$ es
 el espacio de las entradas a la m\'aquina y no necesariamente es un espacio
 vectorial.
@@ -41,7 +42,7 @@ $E_x(f)=f(x)$ para todo $f\in H$, son continuos.
 \textbf{Respuesta:} No. Sobre un espacio de Hilbert cualquiera siempre es posible definir funcionales no-lineales y funcionales no continuos
 
 
-Ejemplo:
+:
 
 \begin{itemize}
 \item Sea $(H,\langle\cdot,\cdot\rangle)$ un espacio de Hilbert e $y\in H$
@@ -83,6 +84,7 @@ es lineal (pero es continuo).
 \end{eqnarray*}
 
 \end{itemize}
+
 
 
 \subsection*{¿Son continuos todos los funcionales de evaluación sobre un espacio de Hilbert de funciones sobre un conjunto no vacío dado?}
@@ -320,8 +322,6 @@ aprendizaje, deben satisfacer.
 
 
 
-
-
 \subsection{Consecuencias de RKHS}
 
 \begin{enumerate}[(a)]
@@ -400,6 +400,7 @@ K: X \times X &\rightarrow &\mathbb{R} \\
 \end{enumerate}
 
 
+
 %FALTA LO DE LA INMERSION
 
 %% \begin{figure}[ht!]
@@ -412,12 +413,12 @@ K: X \times X &\rightarrow &\mathbb{R} \\
 
 
 
-
-
-
-\begin{figure}[ht!]
+\begin{figure}[htpb!]
 \centering
 \includegraphics[width=90mm]{img/featuremaphilbert.jpg}
 \caption{Feature map in RKHS}
 \label{overflow}
 \end{figure}
+
+
+
