agregando gráfico para RKHS

--- a/kernelTrick.tex
+++ b/kernelTrick.tex
@@ -5,7 +5,8 @@
 \usepackage{epsfig}
 \usepackage{array}
 \usepackage{url}
-
+\usepackage{tikz}
+\usetikzlibrary{shapes.geometric,fit}
 \usepackage[spanish]{babel}
 %% \usepackage[utf8x]{inputenc}
 %% \usepackage{amsmath}
