agregando paquete de español

--- a/kernelTrick.tex
+++ b/kernelTrick.tex
@@ -8,7 +8,8 @@
 \usepackage{tikz}
 \usetikzlibrary{shapes.geometric,fit}
 \usepackage[spanish]{babel}
-%% \usepackage[utf8x]{inputenc}
+%\usepackage[latin1]{inputenc}
+\usepackage[utf8x]{inputenc}
 %% \usepackage{amsmath}
 %% \usepackage{amsthm}
 %% \usepackage{graphicx}
