def. de isomorfismo

--- a/kernelTrick.tex
+++ b/kernelTrick.tex
@@ -91,6 +91,9 @@ MIT Press, Cambridge, MA, USA, 2001
 \bibitem{wiki}
 \url{http://en.wikipedia.org/wiki/Reproducing_kernel_Hilbert_space}
 
+\bibitem{wikibooksIsom}
+\url{http://en.wikibooks.org/wiki/Linear_Algebra/Definition_and_Examples_of_Isomorphisms}
+
 \end{thebibliography}
 
 \end{document}
