--- a/src/definiciones.tex
+++ b/src/definiciones.tex
@@ -1,6 +1,25 @@
 \section{Definiciones}\label{sec:def}
 
 \begin{mydef}
+Un isomorfismo entre dos espacios vectoriales $V$ y $W$ es una transformaci\'on  $f:V \rightarrow W$ tal que \cite{wikibooksIsom}:
+
+\begin{enumerate}
+\item $f$ es tiene una correspondencia uno a uno
+\item $f$ preserva la estructura: si $v_1, v_2 \in V$:
+$$f(v_1, v_2) = f(v_1) + f(v_2)$$
+
+y si $v_ \in V$ y $r \in \mathbb{R}$, entonces:
+$$f(rv)= r f(v)$$
+
+\textcolor{red}{En forma m\'as general \ldots}
+
+\end{enumerate}
+% un homomorfismo biyectivo.
+
+%Un homomorfismo es una transformaci\'on que preserva la estructura entre dos estructuras algebraicas (como grupos, anillos, o espacios vectoriales)
+\end{mydef}
+
+\begin{mydef}
 Sea $X$ un $\mathbb{K}$-espacio vectorial
 {\rm ($\mathbb{K}=\mathbb{C}$ o $\mathbb{R}$)}. 
 Una \textbf{forma Hermitiana} positiva definida (p.d.) sobre $X$
