--- a/kernelTrick.tex
+++ b/kernelTrick.tex
@@ -94,6 +94,13 @@ MIT Press, Cambridge, MA, USA, 2001
 \bibitem{wikibooksIsom}
 \url{http://en.wikibooks.org/wiki/Linear_Algebra/Definition_and_Examples_of_Isomorphisms}
 
+\bibitem{wolframREq}
+\url{http://mathworld.wolfram.com/EquivalenceRelation.html}
+
+\bibitem{wolframHomoM}
+\url{http://mathworld.wolfram.com/Homeomorphism.html}
+
+
 \end{thebibliography}
 
 \end{document}
