--- a/src/definiciones.tex
+++ b/src/definiciones.tex
@@ -11,12 +11,36 @@ $$f(v_1, v_2) = f(v_1) + f(v_2)$$
 y si $v_ \in V$ y $r \in \mathbb{R}$, entonces:
 $$f(rv)= r f(v)$$
 
-\textcolor{red}{En forma m\'as general \ldots}
-
 \end{enumerate}
+
+En forma m\'as general, un isomorfismo es un 
+\textbf{homomorfismo biyectivo}.
+Un homomorfismo  es una \textbf{relaci\'on de equivalencia} y una
+correspondencia uno a uno entre puntos en dos figuras geom\'etricas o espacios
+topol\'ogicos, y es continuo en ambas direcciones \cite{wolframHomoM}.
+
+
 % un homomorfismo biyectivo.
 
 %Un homomorfismo es una transformaci\'on que preserva la estructura entre dos estructuras algebraicas (como grupos, anillos, o espacios vectoriales)
+\end{mydef}
+
+
+\begin{mydef}
+Una relaci\'on de equivalencia en un conjunto $X$ es un subconjunto de $X\times
+X$, es decir, una colecci\'on $R$ de pares ordenados de elementos de $X$, que
+satisface ciertas propiedades.
+``$x R y$ '' significa que $(x,y)$ es un elemento de $R$, y se dice que ``$x$
+se relaciona con $y$''.
+Las propiedades son las siguientes \cite{wolframREq}:
+
+\begin{enumerate}
+\item Reflexiva: $a R a \ \forall a \in X$
+
+\item Sim\'etrica: $a R b \Rightarrow b R a \ \forall a,b \in X$
+
+\item Transitiva: $a R b \wedge b R c \Rightarrow a R c \ \forall a,b,c \in X$
+\end{enumerate} 
 \end{mydef}
 
 \begin{mydef}
