completando sección ejercicios

--- a/kernelTrick.tex
+++ b/kernelTrick.tex
@@ -6,6 +6,7 @@
 \usepackage{array}
 \usepackage{url}
 \usepackage{tikz}
+\usepackage{3dplot}
 \usetikzlibrary{shapes.geometric,fit}
 \usepackage[spanish]{babel}
 %\usepackage[latin1]{inputenc}
