--- a/src/ejemplos.tex
+++ b/src/ejemplos.tex
@@ -18,8 +18,43 @@ P_3=(-1,0)\,,\quad
 P_4=(0,-1)\,,\qquad
 Z_0=(0,0)\,.
 $$
+
+\begin{center}
+% from \url{http://tex.stackexchange.com/questions/61316/draw-a-plot-with-point}
+\begin{tikzpicture}[x=1cm,y=1cm]
+
+ \draw[latex-latex, thin, draw=gray] (-2,0)--(2,0) node [right] {$x$}; % l'axe des abscisses
+ \draw[latex-latex, thin, draw=gray] (0,-2)--(0,2) node [above] {$y$}; % l'axe des ordonnées
+
+
+\draw[fill] (1,0) circle [radius=0.05];
+\node [below] at (1,0) {$P_1$};
+
+
+\draw[fill] (0,1) circle [radius=0.05];
+\node [below] at (0,1) {$P_2$};
+
+\draw[fill] (-1,0) circle [radius=0.05];
+\node [below] at (-1,0) {$P_3$};
+
+\draw[fill] (0,-1) circle [radius=0.05];
+\node [below] at (0,-1) {$P_4$};
+
+\draw[fill,red] (0,0) circle [radius=0.05];
+\node [red, below] at (0,0) {$Z_0$};
+
+
+% to ensure that the points are being properly centered:
+\draw [dotted, gray] (-3,-3) grid (3,3);
+%\node [red] at (0,0) {\textbullet};
+
+\end{tikzpicture}
+\end{center}
+
+
+
 Claramente no es posible separar linealmente el dato $Z_0$
-de los datos $P_k$.
+de los datos $P_k, k=1, \ldots, 4$.
 Separar linealmente significa aqu\'\i\ separar $Z_0$ de los $P_k$
 mediante un subespacio lineal (i.e., vectorial) de $\mathbb{R}$,
 esto es mediante una recta que pase por el origen, dejando $Z_0$
@@ -49,7 +84,7 @@ y s\'olo una transformaci\'on af\'\i n
 $f_{(a,b,c)}\in{\rm\bf Aff}(\mathbb{R}^2,\mathbb{R})$.
 
 \smallskip\noindent
-N\'otese que para $(x,y)\in\mathbb{R}$ se tiene:
+N\'otese que para $(x,y)\in\mathbb{R}^{\textcolor{red}{2}}$ se tiene:
 \begin{align*}
 f_{\lambda(a,b,c)+\mu(a',b',c')}(x,y)
 &= f_{(\lambda a + \mu a',\lambda b + \mu b',\lambda c + \mu c')}(x,y) \\
@@ -60,7 +95,7 @@ f_{\lambda(a,b,c)+\mu(a',b',c')}(x,y)
 &= \lambda f_{(a,b,c)}(x,y) + \mu f_{(a',b',c')}(x,y)\,.
 \end{align*}
 Luego, la identificaci\'on $(a,b,c)\mapsto f_{(a,b,c)}$ define un
-isomorfismo entre los espacios vectoriales $\mathbb{R}^3$ y
+isomorfismo\footnote{Revisar en Sec. \label{sec:def} la definici\'on de isomorfismo.} entre los espacios vectoriales $\mathbb{R}^3$ y
 ${\rm\bf Aff}(\mathbb{R}^2,\mathbb{R})$:
 $$
 \mathbb{R}^3 \cong {\rm\bf Aff}(\mathbb{R}^2,\mathbb{R})
@@ -88,6 +123,43 @@ P_3\mapsto Q_3 = (-1,0,-1)\,, & \\
 P_4\mapsto Q_4 = (0,-0,-1)\,. &
 \end{cases}
 \end{equation*}
+
+
+\tdplotsetmaincoords{60}{110}
+\begin{center}
+\begin{tikzpicture}[scale=2,tdplot_main_coords]
+
+\coordinate (O) at (0,0,0);
+
+\draw[thick] (-2,0,0) -- (2,0,0) node [anchor=north east] {$x$};
+\draw[thick] (0,-2,0) -- (0,2,0) node[anchor=north west]{$y$};
+\draw[thick] (0,0,-2) -- (0,0,2) node[anchor=south]{$z$};
+
+
+
+\draw[fill] (1,0,-1) circle [radius=0.05];
+\node [below] at (1,0,-1) {$Q_1$};
+
+
+\draw[fill] (0,1,-1) circle [radius=0.05];
+\node [below] at (0,1,-1) {$Q_2$};
+
+
+\draw[fill,red] (0,0,1) circle [radius=0.05];
+\node [below,red] at (0,0,1) {$W_0$};
+
+\draw[fill,red] (1,0,0) circle [radius=0.05];
+\node [below] at (1,0,0) {$(1,0,0)$};
+
+
+\draw[fill,red] (0,0,-1) circle [radius=0.05];
+\node [below] at (0,0,-1) {$(0,0,-1)$};
+
+
+\end{tikzpicture}
+\end{center}
+
+
 Observando la geometr\'\i a de la situaci\'on, es evidente que
 en $\mathbb{R}^3 \cong {\rm\bf Aff}(\mathbb{R}^2,\mathbb{R})$
 el punto $W_0$ es f\'acilmente separable de los puntos $Q_k$
