--- a/kernelTrick.tex
+++ b/kernelTrick.tex
@@ -73,7 +73,9 @@
 \maketitle
 
 \input{src/intro}
+\newpage
 \input{src/hilbert}
+\newpage
 \input{src/rkhs}
 \input{src/ejemplosRKHS}
 \input{src/kTrick}
