--- a/src/HS-tikz.tex
+++ b/src/HS-tikz.tex
@@ -17,7 +17,7 @@
     %\draw \boundellipse;
     %\draw \secondboundellipse;
     \node[anchor=south] at (current bounding box.north) {$L_x:
-    \mathbb{R}^X \to \mathbb{R}$};
+    H \to \mathbb{R}$};
     \draw[-latex] (d1) -- (r1);
     \draw[-latex] (d2) -- (r2);
     \draw[-latex] (d3) -- (r3);
