--- a/src/rkhs.tex
+++ b/src/rkhs.tex
@@ -18,13 +18,31 @@ En este contexto se definen los funcionales de evaluaci\'on $L_x$,
 para cada punto fijo $x\in X$, sobre
 $\mathfrak{F}(X,\mathbb{R})=\mathbb{R}^X$
 (o sobre $H$, si se prefiere) como:
-$$
-L_x: \mathbb{R}^X\to\mathbb{R}\,,\qquad
-L_x(f):=f(x)\,,\quad\forall f\in \mathbb{R}^X\,.
-$$
+%$$
+%L_x: \mathbb{R}^X\to\mathbb{R}\,,\qquad
+%L_x(f):=f(x)\,,\quad\forall f\in \mathbb{R}^X\,.
+%$$
+
+
+\begin{eqnarray}
+L_x: H &\rightarrow &\mathbb{R} \nonumber \\
+ f &\rightarrow & L_x(f):= f(x) \quad\forall f\in H \label{eq:evalfu}
+\end{eqnarray}
+
 \end{mydef}
 
 \input{src/HS-tikz.tex}
+
+\noindent \textbf{Nota:} Un funcional de evaluación $L_x$ es siempre \textbf{lineal}
+ya que se cumple que:
+\begin{equation*}
+L_x(\alpha f + \beta g)
+= (\alpha f + \beta g)(x)
+= \alpha f(x) + \beta g(x)
+= \alpha L_x(f) + \beta L_x(g)
+\end{equation*}
+para todo $\alpha,\beta\in\mathbb{K}$ y todo $f,g\in H$.
+
 
 \begin{mydef}
 Se dir\'a que un espacio de Hilbert $H$ es RKHS si y s\'olo si
@@ -33,104 +51,12 @@ todos los funcionales de evaluaci\'on $L_x:H\to\mathbb{R}$, $x\in X$,
 $L_x(f)=f(x)$ para todo $f\in H$, son continuos.
 \end{mydef}
 
-\subsection{Demostraciones} 
 
-\begin{enumerate}[(a)]
-
-\item ¿Son todos los funcionales sobre un espacio de Hilbert lineales
-y continuos?
-
-La respuesta es No. Sobre un espacio de Hilbert cualquiera siempre es posible definir funcionales no-lineales y funcionales no continuos:
-
-Sea $(H,\langle\cdot,\cdot\rangle)$ un espacio de Hilbert e $y\in H$
-un elemento no nulo fijo.
-Entonces $\varphi: x\mapsto\langle x,y\rangle$, $x\in H$, es un funcional
-lineal y contínuo.
-
-\textbf{Demo:} 
-\begin{eqnarray*}
-\varphi(\alpha x + \beta z) &=& \langle \alpha x + \beta z, y \rangle\\
-&=&  \langle \alpha x,y \rangle +   \langle \beta z,y \rangle \\
-&=&   \varphi(\alpha x) +  \varphi(\beta z) \\
-&=&   \alpha \varphi(x) +  \beta \varphi(z)
-\end{eqnarray*}
-
-Pero $\varphi: x\mapsto(\langle x,y\rangle)^n$, $x\in H$, $1<n\in\mathbb{N}$
-fijo, es un funcional no-lineal continuo sobre $H$.
-
-\textbf{Demo:} 
-\begin{eqnarray*}
-\varphi(\alpha x + \beta z) &=& (\langle \alpha x + \beta z, y \rangle)^n\\
-&=& (\alpha \varphi(x) +  \beta \varphi(z))^n \\
-&=& \displaystyle \sum_{k=0}^n  \frac{n!}{k!(n-k)!} (\alpha \varphi (x))^{n-k} (\beta \varphi(z)) ^k
-\end{eqnarray*}
-
-
-Otro contraejemplo es $\varphi: x\mapsto\exp(\langle x,y\rangle)$, $x\in H$, tampoco
-es lineal (pero es continuo).
-
-\textbf{Demo:} 
-\begin{eqnarray*}
-\varphi(\alpha x + \beta z) &=& \exp(\langle \alpha x + \beta z, y \rangle)\\
-&=& \exp(\alpha \varphi(x) +  \beta \varphi(z)) \\
-&=& \exp(\alpha \varphi(x))\exp(\beta \varphi(z)) \\
-&=& \alpha\exp(\varphi(x))\beta\exp(\varphi(z)) \\
-&=& \alpha \beta \varphi(x) \varphi(z) 
-\end{eqnarray*}
-
-
-\item ¿Son continuos todos los funcionales de evaluación sobre un
-espacio de Hilbert de funciones sobre un conjunto no vacío dado?
-
-\textbf{Respuesta:}
-La respuesta tambi\'en es NO, como se discute m\'as adelante.
-
-\end{enumerate}
-
-%Ese mismo ejemplo se puede adaptar para exhibir un funcional lineal
-%no-continuo sobre un espacio de Hilbert.
-%{\color{red} Exh\'\i balo}
-
-Aquí consideramos un conjunto no vacío $X$, un espacio de Hilbert
-$H$ de funciones reales sobre $X$, es decir,
-$H\subset\mathfrak{F}(X,\mathbb{R})=\mathbb{R}^X$, y fijamos un
-elemento genérico $x\in X$.
-
-\smallskip
-Sobre este escenario consideramos el funcional de evaluaci\'on
-(tambi\'en gen\'erico):
-
-\begin{eqnarray*}
-L_x: H &\rightarrow &\mathbb{R} \\
- f &\rightarrow & L_x(f):= f(x)
-\end{eqnarray*}
-
-
-\begin{enumerate}
-\item ?`Es $L_x$ lineal?\quad Rpta.: S\'\i. 
-En efecto, se tiene:
-\begin{equation*}
-L_x(\alpha f + \beta g)
-= (\alpha f + \beta g)(x)
-= \alpha f(x) + \beta g(x)
-= \alpha L_x(f) + \beta L_x(g)
-\end{equation*}
-para todo $\alpha,\beta\in\mathbb{K}$ y todo $f,g\in H$,
-lo que confirma el aserto.
-
-\item ?`Es $L_x$ continuo?\quad Rpta.: No siempre. 
-Damos un ejemplo de un funcional evaluaci\'on no continuo sobre un espacio
-de Hilbert $H$ de funciones definidas sobre un conjunto no vac\'\i o $X$.
-
-\smallskip\noindent
-Primeramente aclaremos qu\'e significa que un funcional de evaluaci\'on
-dado $L_x$, $x\in X$ fijo, sea continuo en este contexto.
-
-\smallskip\noindent
-Con este prop\'osito consideremos una sucesi\'on de funciones
-$\{f_n\}$ en  $H\subset\mathfrak{F}(X,\mathbb{R})=\mathbb{R}^X$,
-con $f_n \overset{\|\cdot\|}{\rightarrow}f$ para
-$n\rightarrow\infty$.
+\noindent\textbf{Nota:} Un funcional de evaluaci\'on $L_x$, $x\in X$ fijo es
+\textbf{continuo} si para una sucesi\'on de funciones $\{f_n\}$ en
+$H\subset\mathfrak{F}(X,\mathbb{R})=\mathbb{R}^X$, con $f_n
+\overset{\|\cdot\|}{\rightarrow}f$ para $n\rightarrow\infty$,
+$|L_x(f_n-f)| \rightarrow 0$.  
 La convergencia se\~nalada $f_n \overset{\|\cdot\|}{\rightarrow}f$
 significa que:
 \begin{equation*}
@@ -148,13 +74,35 @@ usual.
 N\'otese tambi\'en que, dado que $H$ es un espacio de Hilbert,
 basta considerar una sucesi\'on nula $\{f_n\}$ y $f=0$.
 
-\smallskip\noindent
-La condici\'on (\ref{stetigkeit}) no siempre se cumple, como lo
-demuestra el siguiente:
 
-\smallskip\noindent
-\item
-\textbf{Contraejemplo.}\quad
+
+\subsection{Funcionales de evaluación}
+¿Son continuos todos los \textbf{funcionales de evaluación} sobre un
+espacio de Hilbert de funciones sobre un conjunto no vacío dado?
+
+\textbf{Respuesta:}
+La respuesta tambi\'en es NO, como se discute m\'as adelante.
+
+
+%Ese mismo ejemplo se puede adaptar para exhibir un funcional lineal
+%no-continuo sobre un espacio de Hilbert.
+%{\color{red} Exh\'\i balo}
+
+Aquí consideramos un conjunto no vacío $X$, un espacio de Hilbert
+$H$ de funciones reales sobre $X$, es decir,
+$H\subset\mathfrak{F}(X,\mathbb{R})=\mathbb{R}^X$, y fijamos un
+elemento genérico $x\in X$.
+
+
+
+\begin{enumerate}
+
+\item ?`Es $L_x$ continuo?\quad Rpta.: No siempre. 
+Damos un ejemplo de un funcional evaluaci\'on no continuo sobre un
+espacio de Hilbert $H$ de funciones definidas sobre un conjunto no
+vac\'\i o $X$. Por lo tanto, la condici\'on (\ref{stetigkeit}) no
+siempre se cumple, como lo demuestra el siguiente contraejemplo:
+
 \begin{itemize}
 \item
 Sea $x =[0,1]\subset\mathbb{R}$ y 
