agregando packages para para linkear referncias

--- a/kernelTrick.tex
+++ b/kernelTrick.tex
@@ -13,8 +13,10 @@
 \usepackage[utf8x]{inputenc}
 %% \usepackage{amsmath}
 %% \usepackage{amsthm}
-%% \usepackage{graphicx}
 %% \usepackage{amsfonts}
+\usepackage{fancyhdr}
+\usepackage{graphicx}
+\usepackage{hyperref,wasysym}
 \usepackage{color}
 \usepackage{enumerate}
 \newtheorem*{myteo}{Teorema}
