--- a/kernelTrick.tex
+++ b/kernelTrick.tex
@@ -102,8 +102,8 @@ MIT Press, Cambridge, MA, USA, 2001
 \bibitem{wolframREq}
 \url{http://mathworld.wolfram.com/EquivalenceRelation.html}
 
-\bibitem{wolframHomoM}
-\url{http://mathworld.wolfram.com/Homeomorphism.html}
+\bibitem{wikiHomoM}
+\url{http://en.wikipedia.org/wiki/Homomorphism}
 
 
 \end{thebibliography}
