--- a/src/ejemplos.tex
+++ b/src/ejemplos.tex
@@ -120,7 +120,7 @@ Z_0\mapsto W_0 = (0,0,1)\,,\qquad
 P_1\mapsto Q_1 = (1,0,-1)\,, & \\
 P_2\mapsto Q_2 = (0,1,-1)\,, & \\
 P_3\mapsto Q_3 = (-1,0,-1)\,, & \\
-P_4\mapsto Q_4 = (0,-0,-1)\,. &
+P_4\mapsto Q_4 = (0,-1,-1)\,. &
 \end{cases}
 \end{equation*}
 
@@ -137,24 +137,45 @@ P_4\mapsto Q_4 = (0,-0,-1)\,. &
 
 
 
-\draw[fill] (1,0,-1) circle [radius=0.05];
-\node [below] at (1,0,-1) {$Q_1$};
+\draw[fill,blue] (1,0,-1) circle [radius=0.05];
+\node [below,blue] at (1,0,-1) {$Q_1$};
 
 
-\draw[fill] (0,1,-1) circle [radius=0.05];
-\node [below] at (0,1,-1) {$Q_2$};
+\draw[fill,blue] (0,1,-1) circle [radius=0.05];
+\node [below,blue] at (0,1,-1) {$Q_2$};
 
 
 \draw[fill,red] (0,0,1) circle [radius=0.05];
 \node [below,red] at (0,0,1) {$W_0$};
 
-\draw[fill,red] (1,0,0) circle [radius=0.05];
+\draw[fill] (1,0,0) circle [radius=0.05];
 \node [below] at (1,0,0) {$(1,0,0)$};
 
 
-\draw[fill,red] (0,0,-1) circle [radius=0.05];
+\draw[fill] (0,0,-1) circle [radius=0.05];
 \node [below] at (0,0,-1) {$(0,0,-1)$};
 
+\draw[fill,blue] (-1,0,-1) circle [radius=0.05];
+\node [below,blue] at (-1,0,-1) {$Q_3$};
+
+
+\draw[fill,blue] (0,-1,-1) circle [radius=0.05];
+\node [below,blue] at (0,-1,-1) {$Q_4$};
+
+\draw [dotted] (1,0,0) -- (1,0,-1);
+\draw [dotted] (1,0,-1) -- (0,0,-1);
+
+
+\draw [dotted] (0,1,0) -- (0,1,-1);
+\draw [dotted] (0,0,-1) -- (0,1,-1);
+
+
+\draw [dotted] (-1,0,0) -- (-1,0,-1);
+\draw [dotted] (0,0,-1) -- (-1,0,-1);
+
+
+\draw [dotted] (0,-1,0) -- (0,-1,-1);
+\draw [dotted] (0,0,-1) -- (0,-1,-1);
 
 \end{tikzpicture}
 \end{center}
