--- a/src/rkhs.tex
+++ b/src/rkhs.tex
@@ -76,32 +76,26 @@ basta considerar una sucesi\'on nula $\{f_n\}$ y $f=0$.
 
 
 
-\subsection{Funcionales de evaluación}
-¿Son continuos todos los \textbf{funcionales de evaluación} sobre un
-espacio de Hilbert de funciones sobre un conjunto no vacío dado?
+%\subsection{Funcionales de evaluación}
+%¿Son continuos todos los \textbf{funcionales de evaluación} sobre un
+%espacio de Hilbert de funciones sobre un conjunto no vacío dado?
 
-\textbf{Respuesta:}
-La respuesta tambi\'en es NO, como se discute m\'as adelante.
+%\textbf{Respuesta:}
+%La respuesta tambi\'en es NO, como se discute m\'as adelante.
 
 
 %Ese mismo ejemplo se puede adaptar para exhibir un funcional lineal
 %no-continuo sobre un espacio de Hilbert.
 %{\color{red} Exh\'\i balo}
 
-Aquí consideramos un conjunto no vacío $X$, un espacio de Hilbert
-$H$ de funciones reales sobre $X$, es decir,
-$H\subset\mathfrak{F}(X,\mathbb{R})=\mathbb{R}^X$, y fijamos un
-elemento genérico $x\in X$.
-
-
-
-\begin{enumerate}
-
-\item ?`Es $L_x$ continuo?\quad Rpta.: No siempre. 
-Damos un ejemplo de un funcional evaluaci\'on no continuo sobre un
-espacio de Hilbert $H$ de funciones definidas sobre un conjunto no
-vac\'\i o $X$. Por lo tanto, la condici\'on (\ref{stetigkeit}) no
-siempre se cumple, como lo demuestra el siguiente contraejemplo:
+\newpage
+Los \textbf{funcionales de evaluación} sobre un espacio de Hilbert
+\textbf{no son siempre continuos}. Aquí consideramos un conjunto no
+vacío $X$, un espacio de Hilbert $H$ de funciones reales sobre $X$, es
+decir, $H\subset\mathfrak{F}(X,\mathbb{R})=\mathbb{R}^X$, y fijamos un
+elemento genérico $x\in X$. Por lo tanto, la condici\'on
+(\ref{stetigkeit}) no siempre se cumple, como lo demuestra el
+siguiente contraejemplo:
 
 \begin{itemize}
 \item
@@ -124,8 +118,6 @@ cerrados, semi-abiertos, etc.
 \item
 En $\mathcal{H}$ se acostumbra a identificar las funciones que
 difieren a lo m\'as en subconjuntos $S$ de $[0,1]$ con medida nula.
-
-\item
 M\'as precisamente, se introduce la relaci\'on:
 $$
 f\sim g \quad\Leftrightarrow\quad
@@ -261,7 +253,6 @@ por lo tanto la condici\'on RKHS es una genuina condici\'on que
 los espacios de Hilbert, en el contexto de las m\'aquinas de
 aprendizaje, deben satisfacer.
 \end{itemize}
-\end{enumerate}
 
 
 
